# Wake-T

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  Wake-T.sln  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  test-package.yml
Wake-T/: Wake-T.pyproj  setup.py
docs/: requirements.txt
docs/source/: conf.py  development.rst  index.rst
docs/source/api/: index.rst
docs/source/examples/: index.rst  single_lpa_stage.rst
docs/source/getting_started/: index.rst  installation.rst  installation_maxwell.rst
docs/source/user_guide/: index.rst  installation.rst  installation_juwels.rst
examples/: track_plasma_fluid.py  track_plasma_qs2d.py  track_plasma_stage.py
other/: logo.xcf
tests/: test_active_plasma_lens.py  test_adaptive_grid.py  test_beam_deposition.py  test_beamline.py  test_bunch_read_save.py  test_custom_blowout.py  test_field_element.py  test_field_gathering.py  test_field_quadrupole.py  test_fluid_model.py  test_gradients.py  test_interpolation.py  test_laser_envelope_model.py  test_laser_initialization.py  test_multibunch.py  test_no_bunch.py  test_openpmd_viewer.py  test_parabolic_profile.py  test_particle_bunch_species.py  test_plasma_beamline.py  test_plasma_deposition.py  test_ramps.py  test_sc_baxevanis.py  test_simple_blowout.py
tests/resources/: r_max_hist_driver_ag.txt  r_max_hist_driver_agl.txt  r_max_hist_witness_ag.txt  r_max_hist_witness_agl.txt
tutorials/: 00_basic_tutorial.py  01_single_plasma_simulation.py  02_plasma_beamline_simulation.py  README.rst
wake_t/: __init__.py  beamline_elements.py  charge_deposition.py  csr.py  data_analysis.py  diagnostics.py  driver_witness.py  interpolation.py  particle_tracking.py  quasistatic_2d.py  wakefields.py
wake_t/beamline_elements/: __init__.py  active_plasma_lens.py  beamline.py  field_element.py  field_quadrupole.py  plasma_elements.py  plasma_ramp.py  plasma_stage.py  tm_elements.py
wake_t/diagnostics/: __init__.py  bunch_analysis.py  openpmd_diag.py
wake_t/fields/: analytic_field.py  analytical_field.py  base.py  gather.py  interpolation.py  numerical_field.py  rz_wakefield.py
wake_t/particles/: charge_deposition.py  deposition.py  interpolation.py  particle_bunch.py  susceptibility_deposition.py  tracking.py
wake_t/particles/push/: boris_pusher.py  runge_kutta_4.py  transfer_matrix.py
wake_t/physics_models/beam_optics/: transfer_matrices.py
wake_t/physics_models/laser/: laser_pulse.py  (+4 more)
wake_t/tracking/: progress_bar.py  tracker.py
wake_t/utilities/: bunch_generation.py  bunch_manipulation.py  bunch_saving.py  numba.py  numba_caching.py  other.py
(+50 files in other folders)
