[metadata]
name = Wake-T
version = attr: wake_t.__version__
description = A fast particle tracking code for plasma accelerators.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/AngelFP/Wake-T
author = Angel Ferran Pousa
author_email = angel.ferran.pousa@desy.de,
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    numba
    scipy
    aptools>=0.1.23
    openpmd-api~=0.14.0
python_requires = >=3.7
